# DERANGEMENT_WIFI

./: .gitignore  CI_CD_SETUP.md  DOCKER_DEPLOYMENT.md  INSTALLATION.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker.yml  trigger.yml
templates/: affecter_ticket.html  agent_dashboard.html  base.html  client_dashboard.html  create_ticket.html  delais_critiques.html  equipe_dashboard.html  equipes.html  index.html  login.html  register.html  suivi_delais.html  tickets_par_equipe.html  view_ticket.html
tests/: test_app.py
