[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "derangement-wifi"
version = "1.0.0"
description = "Application Flask pour la gestion des pannes WiFi"
authors = [{name = "Support WiFi Team", email = "support@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "flask==2.3.3",
    "flask-sqlalchemy==3.0.5",
    "flask-login==0.6.3",
    "flask-wtf==1.1.1",
    "werkzeug==2.3.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-flask==1.2.0",
    "flake8==6.1.0",
    "black==23.9.1",
    "coverage==7.3.2",
]

[project.urls]
Homepage = "https://github.com/mado87464-sketch/DERANGEMENT_WIFI"
Repository = "https://github.com/mado87464-sketch/DERANGEMENT_WIFI"
"Bug Tracker" = "https://github.com/mado87464-sketch/DERANGEMENT_WIFI/issues"
Docker = "https://hub.docker.com/r/mado87464/derangement-wifi"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
